--- a/package.json
+++ b/package.json
@@ -6,32 +6,31 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "postinstall": "npm run build",
-    "start": "serve -s dist",
+    "start": "node server.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@google/markerclusterer": "^1.0.3",
-    "@vue/cli-plugin-babel": "^3.2.0",
-    "@vue/cli-service": "^3.2.0",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
     "ant-design-vue": "^1.4.11",
     "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "express": "^4.17.1",
     "https": "^1.0.0",
     "ngeohash": "^0.6.3",
-    "vue": "^2.5.21",
+    "serve-static": "^1.14.1",
+    "vue": "^2.6.11",
     "vue-moment": "^4.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
-    "@avalanche/eslint-config": "^3.0.0",
-    "@vue/cli-plugin-eslint": "^3.2.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "express": "^4.17.1",
-    "serve": "^11.3.0",
-    "serve-static": "^1.14.1"
+    "@avalanche/eslint-config": "^4.0.0",
+    "@vue/cli-plugin-eslint": "^4.2.2",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-vue": "^6.1.2"
   },
   "browserslist": [
     ">0.25%",
